--- a/config.yml
+++ b/config.yml
@@ -193,8 +193,7 @@ channels:
 - name: SKY STAGE/AXN海外ドラマ/AXNミステリー/スペシャプラス/AT-X/BBCワールドニュース
   type: CS
   channel: CS16
-- name: ホームドラマch/ミュージック・エア/歌謡ポップスch/カートゥーン/ディスカバリーチャンネル/アニマルプラネット/CNNj/囲碁・将棋
-チャンネル
+- name: ホームドラマch/ミュージック・エア/歌謡ポップスch/カートゥーン/ディスカバリーチャンネル/アニマルプラネット/CNNj/囲碁・将棋チャンネル
   type: CS
   channel: CS6
 - name: TBSチャンネル1/テレ朝チャンネル1/テレ朝チャンネル2/ディズニージュニア
@@ -209,24 +208,28 @@ channels:
 
 tuners:
 
-  # PLEX PX-W3U4/PX-Q3U4 & nns779/px4_drv
-
-  - name: PX4-S0
+  - name: S0
     types: [BS, CS]
-    command: recpt1 --b25 --lnb 15 --device /dev/px4video0 {{channel}} {{duration}} -
+    command: recpt1 --b25 --lnb 15 --device /dev/video0 {{channel}} {{duration}} -
 
-  - name: PX4-S1
+  - name: S1
     types: [BS, CS]
-    command: recpt1 --b25 --lnb 15 --device /dev/px4video1 {{channel}} {{duration}} -
+    command: recpt1 --b25 --lnb 15 --device /dev/video1 {{channel}} {{duration}} -
 
-  - name: PX4-T0
+  - name: T0
     types: [GR]
-    command: recpt1 --b25 --device /dev/px4video2 {{channel}} {{duration}} -
+    command: recpt1 --b25 --device /dev/video2 {{channel}} {{duration}} -
 
-  - name: PX4-T1
+  - name: T1
     types: [GR]
-    command: recpt1 --b25 --device /dev/px4video3 {{channel}} {{duration}} -
+    command: recpt1 --b25 --device /dev/video3 {{channel}} {{duration}} -
 
+#tools:
+#    scan-services: mirakc-arib scan-services{{#xsids}} --xsid={{.}}{{/xsids}}
+#    collect-eits: mirakc-arib collect-eits{{#xsids}} --xsid={{.}}{{/xsids}}
+#    filter-service: mirakc-arib filter-packets --sid={{sid}}
+#    filter-program: mirakc-arib filter-packets --sid={{sid}} --eid={{eid}}
+      
 filters:
   post-filter: >-
     socat - tcp-connect:remote:40774
